--- a/indexbackup.html
+++ b/indexbackup.html
@@ -69,13 +69,13 @@
     <p class="lead"><strong>39 Results</strong> found for your business activities and location.</p>
 
     <div id="dashboard" class="container-fluid">
-        <div id="wrapper" class="toggled-left toggled-right">
+        <div id="wrapper">
 
             <!-- Sidebar Left -->
             <div id="sidebar-wrapper-left">
                 <ul class="sidebar-nav-left">
                     <li class="sidebar-brand-left">
-                        <a id="showAll" href="#showAll">All Results (39)</a>
+                        <a href="#">All Results (39)</a>
                     </li>
                     <li>
                         <a href="#">Before you start (5)</a>
@@ -84,7 +84,7 @@
                         <a href="#">Selling Food (4)</a>
                     </li>
                     <li>
-                        <a id="showAlcohol" href="#showAlcohol">Selling Alcohol (4)</a>
+                        <a href="#">Selling Alcohol (4)</a>
                     </li>
                     <li>
                         <a href="#">Advertising & Signs (3)</a>
@@ -96,7 +96,7 @@
                         <a href="#">Planning & Building (10)</a>
                     </li>
                     <li>
-                        <a id="showEmployment" href="#showEmployment">Employing Staff (5)</a>
+                        <a href="#">Employing Staff (6)</a>
                     </li>
                     <li>
                         <a href="#">Taxation (1)</a>
@@ -121,26 +121,82 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-6">
-                            <a href="#menu-toggle-left" class="btn btn-default" id="menu-toggle-left">Show/Hide Categories</a>
+                            <a href="#menu-toggle-left" class="btn btn-default" id="menu-toggle-left">Toggle Menu Left</a>
+                            <h6>Selling Alcohol (4 Results)</h6>
+
                             <div class="results-controlbar">
                                 <a href="#!" id="refineBtn">Refine</a>
                                 <a href="#!" id="AddAll">Add all to pack</a>
                             </div>
 
-                            <div id="searchResultsPanel">
+                            <div class="serviceTile">
+                                <button id="23998" class="servicePreview">
+                                    <h3 class="serviceName">On-Premises Licence - Victoria</h3>
+                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+                                    <shortdesc>
+                                        <p>You will require this licence if you operate a business or club that supplies alcohol for consumption on the premises.</p>
+                                    </shortdesc>
+                                </button>
 
-                                <!-- Search Result HTML page goes here -->
+                                <div class="sub-actions">
+                                    <a id="one" href="#" class="add">Add to pack</a>
+                                </div>
+                            </div>
+
+                            <div class="serviceTile">
+                                <button id="24001" class="servicePreview">
+                                    <h3 class="serviceName">Restaurant and Cafe Licence - Victoria</h3>
+                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+                                    <shortdesc>
+                                        <p>You will require this licence if you operate a business that serves food, such as a restaurant or cafe, and you intend to serve alcohol.</p>
+                                    </shortdesc>
+                                </button>
+
+                                <div class="sub-actions">
+                                    <a id="two" href="#" class="add">Add to pack</a>
+                                </div>
 
                             </div>
+
+                            <div class="serviceTile">
+                                <button id="23993" class="servicePreview">
+                                    <h3 class="serviceName">BYO Permit - Victoria</h3>
+                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+                                    <shortdesc>
+                                        <p>You will require this permit if you operate a restaurant, club or party bus and you intend to allow customers to consume their own alcohol on the premises.</p>
+                                    </shortdesc>
+                                </button>
+
+                                <div class="sub-actions">
+                                    <a id="three" href="#" class="add">Add to pack</a>
+                                </div>
+
+                            </div>
+
+                            <div class="serviceTile">
+                                <button id="23994" class="servicePreview">
+                                    <h3 class="serviceName">General Licence</h3>
+                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+                                    <shortdesc>
+                                        <p>You will require this licence if you operate a business and you intend to provide alcohol to your customers. This applies to pubs, hotels and holiday resorts, as well as other businesses that supply alcohol to customers.</p>
+                                    </shortdesc>
+                                </button>
+
+                                <div class="sub-actions">
+                                    <a id="four" href="#" class="add">Add to pack</a>
+                                </div>
+
+                            </div>
+
                         </div>
 
                         <div class="col-lg-6">
-                            <a href="#menu-toggle-right" class="btn btn-default" id="menu-toggle-right">Show/Hide Pack</a>
+                            <a href="#menu-toggle-right" class="btn btn-default" id="menu-toggle-right">Toggle Menu Right</a>
                             <h6>Service Details</h6>
 
                             <div id="serviceDetailsPanel">
 
-                                <!-- Service details goes here -->
+
 
                             </div>
 
