--- a/alcohol.html
+++ b/alcohol.html
@@ -1,72 +1,95 @@
-<!-- Page Content -->
-<div id="alcohol" class="container-fluid">
-    <div class="row">
-        <div class="col-lg-6">
-            <h6>Selling Alcohol (4 Results)</h6>
+<div id="alcohol">
+    <h6>Selling Alcohol (4 Results)</h6>
 
-            <div class="results-controlbar">
-                <a href="#!" id="refineBtn">Refine</a>
-                <a href="#!" id="AddAll">Add all to pack</a>
-            </div>
+    <div class="serviceTile">
+        <button id="23998" class="servicePreview">
+            <h3 class="serviceName">On-Premises Licence - Victoria</h3>
+            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+            <shortdesc>
+                <p>You will require this licence if you operate a business or club that supplies alcohol for consumption on the premises.</p>
+            </shortdesc>
+        </button>
 
-            <div class="serviceTile">
-                <button id="23998" class="servicePreview">
-                    <h3 class="serviceName">On-Premises Licence - Victoria</h3>
-                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
-                    <shortdesc>
-                        <p>You will require this licence if you operate a business or club that supplies alcohol for consumption on the premises.</p>
-                    </shortdesc>
-                    </button>
-
-                <div class="sub-actions">
-                    <a id="add1" href="#" class="add">Add to pack</a>
-                </div>
-            </div>
-
-            <div class="serviceTile">
-                <button id="24001" class="servicePreview">
-                                    <h3 class="serviceName">Restaurant and Cafe Licence - Victoria</h3>
-                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
-                                    <shortdesc>
-                                        <p>You will require this licence if you operate a business that serves food, such as a restaurant or cafe, and you intend to serve alcohol.</p>
-                                    </shortdesc>
-                                </button>
-
-                <div class="sub-actions">
-                    <a id="add2" href="#" class="add">Add to pack</a>
-                </div>
-
-            </div>
-
-            <div class="serviceTile">
-                <button id="23993" class="servicePreview">
-                                    <h3 class="serviceName">BYO Permit - Victoria</h3>
-                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
-                                    <shortdesc>
-                                        <p>You will require this permit if you operate a restaurant, club or party bus and you intend to allow customers to consume their own alcohol on the premises.</p>
-                                    </shortdesc>
-                                </button>
-
-                <div class="sub-actions">
-                    <a id="add3" href="#" class="add">Add to pack</a>
-                </div>
-
-            </div>
-
-            <div class="serviceTile">
-                <button id="23994" class="servicePreview">
-                                    <h3 class="serviceName">General Licence</h3>
-                                    <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
-                                    <shortdesc>
-                                        <p>You will require this licence if you operate a business and you intend to provide alcohol to your customers. This applies to pubs, hotels and holiday resorts, as well as other businesses that supply alcohol to customers.</p>
-                                    </shortdesc>
-                                </button>
-
-                <div class="sub-actions">
-                    <a id="add4" href="#" class="add">Add to pack</a>
-                </div>
-            </div>
-
+        <div class="sub-actions">
+            <a href="#" class="add">Add to pack</a>
         </div>
     </div>
+
+    <div class="serviceTile">
+        <button id="24001" class="servicePreview">
+            <h3 class="serviceName">Restaurant and Cafe Licence - Victoria</h3>
+            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+            <shortdesc>
+                <p>You will require this licence if you operate a business that serves food, such as a restaurant or cafe, and you intend to serve alcohol.</p>
+            </shortdesc>
+        </button>
+
+        <div class="sub-actions">
+            <a href="#" class="add">Add to pack</a>
+        </div>
+
+    </div>
+
+    <div class="serviceTile">
+        <button id="23993" class="servicePreview">
+            <h3 class="serviceName">BYO Permit - Victoria</h3>
+            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+            <shortdesc>
+                <p>You will require this permit if you operate a restaurant, club or party bus and you intend to allow customers to consume their own alcohol on the premises.</p>
+            </shortdesc>
+        </button>
+
+        <div class="sub-actions">
+            <a href="#" class="add">Add to pack</a>
+        </div>
+
+    </div>
+
+    <div class="serviceTile">
+        <button id="23994" class="servicePreview">
+            <h3 class="serviceName">General Licence</h3>
+            <meta-label>Licence | VIC | Liquor and Alcohol Products and Services</meta-label>
+            <shortdesc>
+                <p>You will require this licence if you operate a business and you intend to provide alcohol to your customers. This applies to pubs, hotels and holiday resorts, as well as other businesses that supply alcohol to customers.</p>
+            </shortdesc>
+        </button>
+
+        <div class="sub-actions">
+            <a href="#" class="add">Add to pack</a>
+        </div>
+
+    </div>
 </div>
+
+<script>
+$(document).ready(function () {    
+//--- Add/Remove to pack
+    $('.add').click(function() {
+
+        var $h3 = $(event.target).closest('.serviceTile').find('h3');
+        var $title = $($h3).text();
+        var delButton = "<button class='delete'>remove</button>";
+
+        $('ul.sidebar-nav-right').append('<li>' + $title + delButton + '</li>');
+//        $('.add').prop('disabled', true);
+
+    });
+
+    $(document).on("click", ".delete", function() {
+        $(this).parent('li').remove();
+        $(this).remove();
+
+    });
+    
+        //--- Loading Service Details ---//
+
+    $('button').click(function (e) {
+
+        var buttonId = this.id;
+        var objectFileName = '<object data="' + buttonId + '.html" />';
+
+        e.preventDefault();
+        $('#serviceDetailsPanel').html(objectFileName);
+    });
+});
+</script>
