Uploaded all files again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="js/modernizr.custom.js"></script>
 
     <!-- Custom styles for this template -->
-    <link href="main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
 </head>
 
@@ -31,7 +31,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
         <a class="navbar-brand" href="#"><strong>ABLIS</strong> | <strong>business</strong>.gov.au</a>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+<!--        <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -47,7 +47,7 @@
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
-        </div>
+        </div>-->
     </nav>
 
     <!-- Begin page content -->
@@ -74,6 +74,7 @@
             <!-- Sidebar Left -->
             <div id="sidebar-wrapper-left">
                 <ul class="sidebar-nav-left">
+                   <h5>Categories (39 results total)</h5>
                     <li class="sidebar-brand-left">
                         <a id="showAll" href="#showAll">All Results (39)</a>
                     </li>
@@ -149,7 +150,10 @@
                                 <button type="button" class="overlay-close">Close</button>
                                 <form>
                                     <fieldset class="longfield">
-                                        <legend class="with-tooltip">Will you employ staff or contractors? <a class="cd-btn help" href="#"><span>Help - Employing staff and contractors</span></a></legend>
+                                        <legend class="with-tooltip">Will you employ staff or contractors? 
+                                        
+<!--                                        <a class="cd-btn help" href="#"><span>Help - Employing staff and contractors</span></a>-->
+                                        </legend>
 
                                         <div class="radio-toggle">
                                             <label class="label-left" for="1">
@@ -177,7 +181,7 @@
                                     </fieldset>
 
                                     <fieldset class="longfield">
-                                        <legend class="with-tooltip">Will you act as a self-insurer for Workers Compensation? <a class="cd-btn help" href="#"><span>Help - Workers Compensation</span></a></legend>
+                                        <legend class="with-tooltip">Will you act as a self-insurer for Workers Compensation?</legend>
 
                                         <div class="radio-toggle">
                                             <label class="label-left" for="3">
@@ -209,7 +213,9 @@
                                     </fieldset>
 
                                     <fieldset class="longfield">
-                                        <legend class="with-tooltip">Do you want information on workplace health and safety? <a class="cd-btn help" href="#"><span>Help - Workplace health and safety</span></a></legend>
+                                        <legend class="with-tooltip">Do you want information on workplace health and safety? 
+<!--                                        <a class="cd-btn help" href="#"><span>Help - Workplace health and safety</span></a>-->
+                                        </legend>
 
                                         <div class="radio-toggle">
                                             <label class="label-left" for="5">
@@ -224,7 +230,7 @@
                                     </fieldset>
 
                                     <fieldset class="longfield">
-                                        <legend class="with-tooltip">Will your business provide training to staff or seek assistance with their training? <a class="cd-btn help" href="#"><span>Help - Training staff</span></a></legend>
+                                        <legend class="with-tooltip">Will your business provide training to staff or seek assistance with their training? </legend>
 
                                         <div class="radio-toggle">
                                             <label class="label-left" for="7">
@@ -236,14 +242,6 @@
                                         </div>
 
                                     </fieldset>
-                                    <div class="controls-container">
-                                        <div class="controls-content">
-                                            <button class="btn" onclick="location.href='business-location.html'" type="button">Previous</button>
-                                            <button class="btn btn-default next" onclick="location.href='search-results.html'" type="button">Next</button>
-                                        </div>
-                                        <!-- controls-content -->
-                                    </div>
-
                                 </form>
                             </div>
 
@@ -261,11 +259,13 @@
 
 
 
+<!--
     <footer class="footer">
         <div class="container">
             <span class="text-muted">Place sticky footer content here.</span>
         </div>
     </footer>
+-->
 
 
     <!-- Bootstrap core JavaScript
